Removes Sbt-org-policies Dependency (#465)
* Removes sbt-org-policies and
the dependency with itself

* Removes useless code

* Removes more useless code

* Updates docs

* Fix ci-docs command alias

* Apply suggestions from code review

Co-Authored-By: Ben Fradet <benjamin.fradet@gmail.com>

* Replaces handleError by handleErrorWith

Co-authored-by: Ben Fradet <benjamin.fradet@gmail.com>